<resources>
    <string name="app_name">MyApiDroid</string>
    <string name="menu_listar">Lista</string>
    <string name="menu_buscar">Buscar</string>
    <string name="menu_mostrar">Mostrar</string>
    <string name="menu_ordernar">Ordenar</string>
    <string name="menu_subir">Subir</string>
    <string name="menu_eliminar">Eliminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>